Similar usages: Fixes in internal actions for i/o of data files.
GitOrigin-RevId: 0b67d64849b3dad4b6a9b028149dcfb1e6c37050